# retrochat-v3

./: .gitignore  LICENSE  README.md  RELEASE.md  STRUCTURE.md  build.ps1  chat.py  chat_manager.py  config.example.json  config_manager.py  debug_closing.py  debug_detailed_trace.py  debug_formatter.py  debug_full_flow.py  debug_llm_output.py  debug_malformed.py  debug_malformed_llm.py  debug_text_processing.py  demo_fixes.py  examine_session.py  main.py  model_manager.py  pyproject.toml  rchat.bat  requirements.txt  retrochat.spec  setup.py  test_build.py  test_code_block_fixes.py  test_session_fixes.py  utils.py
.github/workflows/: build-and-release.yml
.kiro/hooks/: python-docs-sync.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
retrochat_app/api/: llm_client.py  providers.py
retrochat_app/core/: .last_session  code_block_utils.py  config.py  config_manager.py  io_utils.py  provider_manager.py  session_manager.py  text_processing_utils.py  user_settings.json
retrochat_app/sessions/: session_e1f9780c-d224-46bb-9412-e97d6e4bf6bc.json
retrochat_app/ui/: code_block_formatter.py  command_processor.py  display_handler.py  terminal_ui.py
retrochat_app/utils/: logger_setup.py
retrochat_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: setup_openrouter.py
src/: __init__.py  __version__.py  chat_manager.py  cli.py  commands.py  config.py
src/core/: __init__.py  chat.py  config_manager.py  model_manager.py
src/providers/: __init__.py  factory.py  (+6 more)
tests/: test_provider_handlers.py  test_provider_manager.py  test_providers.py
(+6 files in other folders)
