[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "retrochat-cli"
version = "3.0.0"
description = "Multi-Provider AI Chat Application"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "DefamationStation", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/DefamationStation/retrochat-v3"
Repository = "https://github.com/DefamationStation/retrochat-v3"
Issues = "https://github.com/DefamationStation/retrochat-v3/issues"

[project.scripts]
rchat = "main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "LICENSE"]
